Fixes left menu line jumping

--- a/src/app/core/components/left-nav-tree/left-nav-tree.component.scss
+++ b/src/app/core/components/left-nav-tree/left-nav-tree.component.scss
@@ -70,10 +70,12 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  flex: 1;
 }
 
 .tree-nav-caption {
   margin-left: var(--alg-space-size-5);
+  flex: 1;
 
   &.children-caption {
     margin-left: toRem(14);
